Pipeline/javax_imageio_spi/javax_imageio_spiOutputResult.txt
Sample: ImageInputStreamSpi_2
----------------------------------------------------------------
output:
./javax_imageio_spi/javaFiles/ImageInputStreamSpi_2.java:8: error: <anonymous ImageInputStreamSpi_2$1> is not abstract and does not override abstract method createInputStreamInstance(Object,boolean,File) in ImageInputStreamSpi
        ImageInputStreamSpi spi = new ImageInputStreamSpi() {
                                                            ^
1 error


================================================================

Sample: ImageReaderSpi_1
----------------------------------------------------------------
output:
./javax_imageio_spi/javaFiles/ImageReaderSpi_1.java:5: error: <anonymous ImageReaderSpi_1$1> is not abstract and does not override abstract method createReaderInstance(Object) in ImageReaderSpi
        ImageReaderSpi imageReaderSpi = new ImageReaderSpi() {
                                                             ^
1 error


================================================================

Sample: ImageWriterSpi_5
----------------------------------------------------------------
output:
./javax_imageio_spi/javaFiles/ImageWriterSpi_5.java:7: error: ImageWriterSpi is abstract; cannot be instantiated
        ImageWriterSpi writerSpi = new ImageWriterSpi();
                                   ^
1 error


================================================================

Sample: ServiceRegistry_4
----------------------------------------------------------------
output:
./javax_imageio_spi/javaFiles/ServiceRegistry_4.java:5: error: constructor ServiceRegistry in class ServiceRegistry cannot be applied to given types;
        ServiceRegistry registry = new ServiceRegistry();
                                   ^
  required: Iterator<Class<?>>
  found:    no arguments
  reason: actual and formal argument lists differ in length
./javax_imageio_spi/javaFiles/ServiceRegistry_4.java:6: error: cannot find symbol
        registry.add("Service1");
                ^
  symbol:   method add(String)
  location: variable registry of type ServiceRegistry
./javax_imageio_spi/javaFiles/ServiceRegistry_4.java:7: error: cannot find symbol
        registry.add("Service2");
                ^
  symbol:   method add(String)
  location: variable registry of type ServiceRegistry
./javax_imageio_spi/javaFiles/ServiceRegistry_4.java:8: error: cannot find symbol
        registry.add("Service3");
                ^
  symbol:   method add(String)
  location: variable registry of type ServiceRegistry
4 errors


================================================================

